# mops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: appium_android_tests.yml  appium_ios_tests.yml  manual_update_screenshots.yml  playwright_tests.yml  publish-to-pypi.yml  ruff.yml  selenium_safari_tests.yml  selenium_tests.yml  static_tests.yml
docs/: .readthedocs.yaml
docs/source/driver_wrapper/: index.md
mops/: __init__.py  exceptions.py  js_scripts.py  keyboard_keys.py  shared_utils.py  visual_comparison.py
mops/abstraction/: driver_wrapper_abc.py  element_abc.py  mixin_abc.py  page_abc.py
mops/base/: driver_wrapper.py  element.py  group.py  page.py
mops/mixins/: driver_mixin.py  internal_mixin.py  native_context.py
mops/mixins/objects/: box.py  driver.py  location.py  locator.py  locator_type.py  scrolls.py  size.py  visual_comaprison_mixin.py
mops/playwright/: play_driver.py  play_element.py
mops/selenium/: sel_utils.py
mops/selenium/core/: core_driver.py  core_element.py
mops/selenium/driver/: mobile_driver.py  web_driver.py
mops/selenium/elements/: mobile_element.py  web_element.py
mops/selenium/pages/: mobile_page.py
mops/utils/: decorators.py  internal_utils.py  logs.py  previous_object_driver.py  selector_synchronizer.py
tests/: conftest.py
tests/static_tests/unit/: test_cdp_robustness.py  test_wait_condition.py
tests/web_tests/: test_cookies.py  test_driver.py  test_storage.py
